cikk nagyjabol kesz

--- a/biblio/dsym.bib
+++ b/biblio/dsym.bib
@@ -135,6 +135,18 @@
   pages   = "205--238"
 }
 
+% El tranzitiv sikbeli kovezesek
+@article{LMS94,
+  author  = "Z. Lu\v{c}i\'c, E. Molnár and M. Stojanovi\'c",
+  title   = "The 14 infinte families of isotoxal tilings in the planes of
+    constant curvature",
+  year    = "1994",
+  journal = "Periodica Mathematica Hungarica",
+  volume  = "29",
+  number  = "2",
+  pages   = "177--195"
+}
+
 % Max 3 elemu D-szimbolumok kivesezese, rendezes bevezetese, definiciok szep
 % leirasa.
 @article{M96,
@@ -227,6 +239,11 @@
 @misc{MYHOME,
   author  = "Lajos Boróczki",
   title   = "http://www.math.bme.hu/\~{}boroczki/{D}-symbol"
+}
+
+@misc{MYHOME_edge_trans,
+  author  = "Lajos Boróczki",
+  title   = "http://www.math.bme.hu/\~{}boroczki/{D}-symbols-edge-transitive/"
 }
 
 @article{EMPTY,
